commit after projec2 and load data into sql databases

--- a/Transformations/01.ipynb
+++ b/Transformations/01.ipynb
@@ -1,26 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "6a0c0da1-df9a-42d4-bfd6-eae9de8ff889",
+     "nuid": "97f7f082-df7c-49ee-aacf-04e3f54f152e",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
-   "outputs": [],
    "source": [
-    "dbutils.widgets.text(\"p_data_source\",\"\")\n",
-    "v_data_source = dbutils.widgets.get(\"p_data_source\")\n",
-    "print(v_data_source)"
+    "### Importing Source Files"
    ]
   },
   {
@@ -33,7 +26,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "76ac0da8-ff2c-476f-bc76-33bb374b17d5",
+     "nuid": "46953e45-994f-4c80-9889-db323f5babc0",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -54,7 +47,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "2fb1b344-f2f9-44ab-b675-4f01641801f7",
+     "nuid": "71bf68db-f96d-444d-934f-2f228b886d44",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -74,8 +67,9 @@
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
+     "collapsed": true,
      "inputWidgets": {},
-     "nuid": "d5a443f1-8468-4461-a76e-37a8efc1a875",
+     "nuid": "9f81baa8-e79b-4abc-9014-fe457adbbba1",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -83,8 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.types import StructType,StructField,StringType,IntegerType,DoubleType,DateType\n",
-    "from pyspark.sql.functions import lit"
+    "%run \"../Includes/sas alternative\""
    ]
   },
   {
@@ -97,7 +90,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "de0529b0-0a22-4f18-98b1-847e6dfae96c",
+     "nuid": "56c33fbe-5a46-4117-a1c8-08890438c038",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -105,28 +98,119 @@
    },
    "outputs": [],
    "source": [
-    "result_schema = StructType([\n",
-    "    StructField(\"resultId\",IntegerType(),True),\n",
-    "    StructField(\"raceId\",IntegerType(),True),\n",
-    "    StructField(\"driverId\",IntegerType(),True),\n",
-    "    StructField(\"constructorId\",IntegerType(),True),\n",
-    "    StructField(\"number\",IntegerType(),True),\n",
-    "    StructField(\"grid\",IntegerType(),True),\n",
-    "    StructField(\"position\",IntegerType(),True),\n",
-    "    StructField(\"positionText\",IntegerType(),True),\n",
-    "    \n",
-    "    StructField(\"positionOrder\",IntegerType(),True),\n",
-    "    StructField(\"points\",IntegerType(),True),\n",
-    "    StructField(\"laps\",IntegerType(),True),\n",
-    "    StructField(\"time\",StringType(),True),\n",
-    "    StructField(\"milliseconds\",IntegerType(),True),\n",
-    "    StructField(\"fastestLap\",IntegerType(),True),\n",
-    "    StructField(\"rank\",IntegerType(),True),\n",
-    "    StructField(\"fastestLapTime\",StringType(),True),\n",
-    "    StructField(\"fastestLapSpeed\",DoubleType(),True),\n",
-    "    StructField(\"statusId\",IntegerType(),True),\n",
+    "df = spark.read.parquet(f\"{Presentation_path}/Race_Results_R\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "063139f0-89a4-483a-947d-ce70f10b649b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2592cd75-82cd-4df6-b212-244a1b53cf35",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# find out total points based on race_year, driver_name, driver_nationality, team\n",
+    "from pyspark.sql.functions import sum,col,count,when\n",
+    "df_total_points_count_positionTrue = df.groupBy('race_year','driver_name', 'driver_nationality', 'team').agg(sum('points').alias(\"total_points\"),count(when(col(\"position\")==1, True)).alias(\"wins\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6a4cfb71-b3c1-447d-ae2e-d2caa4e47cfc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_total_points_count_positionTrue.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f9a89056-2174-462c-a5da-9152b5d4a7dd",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "race_year = 2020 display"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_total_points_count_positionTrue.filter(col('race_year')== 2020).display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ba296983-b412-4a52-b89a-86ded6d93e7c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# identify the rank based up on partitionBY(race_year) order by wins and total points descending order (window functions)\n",
     "\n",
-    "])"
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.functions import rank,desc\n",
+    "\n",
+    "window_spec = Window.partitionBy(\"race_year\").orderBy(desc(\"wins\"),desc(\"total_points\"))"
    ]
   },
   {
@@ -139,7 +223,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "30568e5c-7cff-47a1-8d58-d8755a3afc46",
+     "nuid": "fac7c8cd-b8dc-412e-9c24-edb95b76afca",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -147,7 +231,8 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.json(raw_path,result_schema)"
+    "df_window = df_total_points_count_positionTrue.withColumn(\"rank\", rank().over(window_spec))\n",
+    "df_window.display()"
    ]
   },
   {
@@ -160,7 +245,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "707dd7c8-7a84-46d1-82b4-06d33a2704e8",
+     "nuid": "c9aaa1aa-503f-4401-bb06-579b51b9f2ea",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -168,7 +253,9 @@
    },
    "outputs": [],
    "source": [
-    "df.display()"
+    "from pyspark.sql.functions import dense_rank\n",
+    "df_window_dense = df_total_points_count_positionTrue.withColumn(\"dense_rank\", dense_rank().over(window_spec))\n",
+    "df_window_dense.display()"
    ]
   },
   {
@@ -181,7 +268,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "68a75654-f078-45e3-94c9-0fe6403b596a",
+     "nuid": "a9847e67-1ff0-4cab-bce9-8b9a2a044639",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -189,18 +276,8 @@
    },
    "outputs": [],
    "source": [
-    "df = df.withColumnRenamed('resultId','result_Id')\\\n",
-    "       .withColumnRenamed('raceId', 'race_Id')\\\n",
-    "       .withColumnRenamed('driverId','driver_Id')\\\n",
-    "       .withColumnRenamed('constructerId','constructer_Id')\\\n",
-    "       .withColumnRenamed('positionText', 'position_Text')\\\n",
-    "       .withColumnRenamed('positionOrder', 'position_Order')\\\n",
-    "       .withColumnRenamed('fastestLap', 'fastest_Lap')\\\n",
-    "       .withColumnRenamed('fastestLapTime', 'fastest_Lap_Time')\\\n",
-    "       .withColumnRenamed('fastestLapSpeed', 'fastest_Lap_Speed')\\\n",
-    "       .withColumnRenamed('statusId', 'status_Id')\\\n",
-    "       .drop('status_Id')\\\n",
-    "       .withColumn(\"Data_Source\", lit(v_data_source))"
+    "# race_year 2020 display\n",
+    "df_window.filter(col('race_year')==2020).display()"
    ]
   },
   {
@@ -213,7 +290,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8fc3f3ff-8a41-4d15-b088-3b797efbdac2",
+     "nuid": "5a3ac5ec-6309-4b20-b0a7-b906920995fa",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -221,7 +298,7 @@
    },
    "outputs": [],
    "source": [
-    "df = add_ingestion_date(df)"
+    "df_window.write.mode('overwrite').parquet(f\"{Presentation_path}/Driver_Standing\")"
    ]
   },
   {
@@ -234,49 +311,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "9f5ca89e-883d-485b-b1c7-940d9ca8512f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "bd8d9e81-9647-4621-abcd-0960d767fa1c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df.write.mode('overwrite').partitionBy('race_Id').parquet(f\"{Processed_path}/Results\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "6991a1e8-44c2-4534-b0d1-6ea6a7285f04",
+     "nuid": "e3e369ad-81cf-4c57-85b6-a8a79ceb9e7b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -286,6 +321,22 @@
    "source": [
     "dbutils.notebook.exit(\"Sucessed\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0e16ddee-d44e-418d-b6e7-81240466491d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -301,35 +352,8 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Results",
-   "widgets": {
-    "p_data_source": {
-     "currentValue": "dataengineer",
-     "nuid": "a69db9fd-21bb-47ef-936b-15ca51e5dced",
-     "typedWidgetInfo": {
-      "autoCreated": false,
-      "defaultValue": "",
-      "label": null,
-      "name": "p_data_source",
-      "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
-      },
-      "parameterDataType": "String"
-     },
-     "widgetInfo": {
-      "widgetType": "text",
-      "defaultValue": "",
-      "label": null,
-      "name": "p_data_source",
-      "options": {
-       "widgetType": "text",
-       "autoCreated": null,
-       "validationRegex": null
-      }
-     }
-    }
-   }
+   "notebookName": "01",
+   "widgets": {}
   },
   "language_info": {
    "name": "python"
