--- a/Transformations/02_.ipynb
+++ b/Transformations/02_.ipynb
@@ -10,30 +10,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "6a0c0da1-df9a-42d4-bfd6-eae9de8ff889",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dbutils.widgets.text(\"p_data_source\",\"\")\n",
-    "v_data_source = dbutils.widgets.get(\"p_data_source\")\n",
-    "print(v_data_source)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "76ac0da8-ff2c-476f-bc76-33bb374b17d5",
+     "nuid": "2cb1e292-e097-4bfc-91ce-a8ff46fe1569",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -54,7 +31,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "2fb1b344-f2f9-44ab-b675-4f01641801f7",
+     "nuid": "c177a1a8-e35b-4026-a272-4ed56af7b807",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -74,8 +51,9 @@
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
+     "collapsed": true,
      "inputWidgets": {},
-     "nuid": "d5a443f1-8468-4461-a76e-37a8efc1a875",
+     "nuid": "75d1e308-b45d-49ea-bf22-892cb556d308",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -83,8 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.types import StructType,StructField,StringType,IntegerType,DoubleType,DateType\n",
-    "from pyspark.sql.functions import lit"
+    "%run \"../Includes/sas alternative\""
    ]
   },
   {
@@ -97,7 +74,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "de0529b0-0a22-4f18-98b1-847e6dfae96c",
+     "nuid": "5376b0b0-37ee-4b60-884c-0e7898c87805",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -105,28 +82,33 @@
    },
    "outputs": [],
    "source": [
-    "result_schema = StructType([\n",
-    "    StructField(\"resultId\",IntegerType(),True),\n",
-    "    StructField(\"raceId\",IntegerType(),True),\n",
-    "    StructField(\"driverId\",IntegerType(),True),\n",
-    "    StructField(\"constructorId\",IntegerType(),True),\n",
-    "    StructField(\"number\",IntegerType(),True),\n",
-    "    StructField(\"grid\",IntegerType(),True),\n",
-    "    StructField(\"position\",IntegerType(),True),\n",
-    "    StructField(\"positionText\",IntegerType(),True),\n",
-    "    \n",
-    "    StructField(\"positionOrder\",IntegerType(),True),\n",
-    "    StructField(\"points\",IntegerType(),True),\n",
-    "    StructField(\"laps\",IntegerType(),True),\n",
-    "    StructField(\"time\",StringType(),True),\n",
-    "    StructField(\"milliseconds\",IntegerType(),True),\n",
-    "    StructField(\"fastestLap\",IntegerType(),True),\n",
-    "    StructField(\"rank\",IntegerType(),True),\n",
-    "    StructField(\"fastestLapTime\",StringType(),True),\n",
-    "    StructField(\"fastestLapSpeed\",DoubleType(),True),\n",
-    "    StructField(\"statusId\",IntegerType(),True),\n",
+    "df = spark.read.parquet(f\"{Presentation_path}/Race_Results_R\")\n",
+    "df.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6491fbe7-4d6d-4d6a-ad03-b87bf1e61cb2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# identify total points based on race year, team\n",
+    "# whomever having position value = 1 then, True take count of the positions having true, rename it as wins\n",
     "\n",
-    "])"
+    "from pyspark.sql.functions import sum,count,when,col\n",
+    "df_Total_Points = df.groupBy('race_year','team','points','position').agg(sum('points').alias(\"total_points\"),count(when(col('position')==1, True)).alias(\"Wins\"))"
    ]
   },
   {
@@ -139,7 +121,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "30568e5c-7cff-47a1-8d58-d8755a3afc46",
+     "nuid": "62a522e0-1ef1-47fc-8e94-83687c43a65d",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -147,7 +129,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.json(raw_path,result_schema)"
+    "df_Total_Points.display()"
    ]
   },
   {
@@ -160,7 +142,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "707dd7c8-7a84-46d1-82b4-06d33a2704e8",
+     "nuid": "6afd3e93-e113-42c9-bb80-2161f795d1f2",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -168,7 +150,15 @@
    },
    "outputs": [],
    "source": [
-    "df.display()"
+    "# identify the rank based up on partitionBY(race_year) order by wins and total points descending order (window functions)\n",
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.functions import rank, desc\n",
+    "\n",
+    "window_spec = Window.partitionBy('race_year').orderBy(desc('Wins'), desc('total_points'))\n",
+    "\n",
+    "df_rank = df_Total_Points.withColumn(\"Rank\", rank().over(window_spec))\n",
+    "\n",
+    "df_rank.display()"
    ]
   },
   {
@@ -181,7 +171,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "68a75654-f078-45e3-94c9-0fe6403b596a",
+     "nuid": "e8e1b15a-ddff-4614-812e-867807a15c4d",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -189,18 +179,8 @@
    },
    "outputs": [],
    "source": [
-    "df = df.withColumnRenamed('resultId','result_Id')\\\n",
-    "       .withColumnRenamed('raceId', 'race_Id')\\\n",
-    "       .withColumnRenamed('driverId','driver_Id')\\\n",
-    "       .withColumnRenamed('constructerId','constructer_Id')\\\n",
-    "       .withColumnRenamed('positionText', 'position_Text')\\\n",
-    "       .withColumnRenamed('positionOrder', 'position_Order')\\\n",
-    "       .withColumnRenamed('fastestLap', 'fastest_Lap')\\\n",
-    "       .withColumnRenamed('fastestLapTime', 'fastest_Lap_Time')\\\n",
-    "       .withColumnRenamed('fastestLapSpeed', 'fastest_Lap_Speed')\\\n",
-    "       .withColumnRenamed('statusId', 'status_Id')\\\n",
-    "       .drop('status_Id')\\\n",
-    "       .withColumn(\"Data_Source\", lit(v_data_source))"
+    "# print(race_year==2020) write constructer folder in presentation\n",
+    "df_rank.filter(col('race_year')==2020).display()"
    ]
   },
   {
@@ -213,7 +193,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8fc3f3ff-8a41-4d15-b088-3b797efbdac2",
+     "nuid": "f0d56792-336c-4adb-b407-fc217c8b5d29",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -221,7 +201,7 @@
    },
    "outputs": [],
    "source": [
-    "df = add_ingestion_date(df)"
+    "df_rank.write.mode('overwrite').parquet(f\"{Presentation_path}/Constructer\")"
    ]
   },
   {
@@ -234,49 +214,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "9f5ca89e-883d-485b-b1c7-940d9ca8512f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "bd8d9e81-9647-4621-abcd-0960d767fa1c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df.write.mode('overwrite').partitionBy('race_Id').parquet(f\"{Processed_path}/Results\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "6991a1e8-44c2-4534-b0d1-6ea6a7285f04",
+     "nuid": "34f4c66a-bf52-4b0f-a23c-aa69f3e700de",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -286,6 +224,22 @@
    "source": [
     "dbutils.notebook.exit(\"Sucessed\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9d1d5972-6de3-46bb-9b7c-86a0e1b5ec37",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -301,35 +255,8 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Results",
-   "widgets": {
-    "p_data_source": {
-     "currentValue": "dataengineer",
-     "nuid": "a69db9fd-21bb-47ef-936b-15ca51e5dced",
-     "typedWidgetInfo": {
-      "autoCreated": false,
-      "defaultValue": "",
-      "label": null,
-      "name": "p_data_source",
-      "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
-      },
-      "parameterDataType": "String"
-     },
-     "widgetInfo": {
-      "widgetType": "text",
-      "defaultValue": "",
-      "label": null,
-      "name": "p_data_source",
-      "options": {
-       "widgetType": "text",
-       "autoCreated": null,
-       "validationRegex": null
-      }
-     }
-    }
-   }
+   "notebookName": "02_",
+   "widgets": {}
   },
   "language_info": {
    "name": "python"
