commits after sql queries

--- a/Analytics/01_Processed_Tables.ipynb
+++ b/Analytics/01_Processed_Tables.ipynb
@@ -68,7 +68,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "191383b6-8505-4a90-aa42-eae6bb5fd549",
      "showTitle": false,
@@ -147,7 +150,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9872cf6e-f892-4af2-a928-e2b489f6ab66",
      "showTitle": false,
@@ -197,7 +203,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "085001de-5f24-420c-b0fa-8341f1c14dac",
      "showTitle": false,
@@ -250,7 +259,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c4b9335b-e6f9-430b-8230-faeaaf4ae4b1",
      "showTitle": false,
@@ -301,7 +313,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6c801828-e70e-4a6c-a430-21aed34c1413",
      "showTitle": false,
@@ -354,7 +369,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "71cf9f8c-709e-4af4-a006-e4de2962ea95",
      "showTitle": false,
@@ -408,7 +426,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "967b3984-806e-4079-9da7-6504691dbce1",
      "showTitle": false,
@@ -459,7 +480,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "dd39972c-8a34-437a-9b06-769e5ae67a6c",
      "showTitle": false,
@@ -522,7 +546,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "38467c0e-afef-4a26-9386-c8558bbda555",
      "showTitle": false,
@@ -531,7 +558,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
