--- a/Analytics/02_Create_Presentation_Tables.ipynb
+++ b/Analytics/02_Create_Presentation_Tables.ipynb
@@ -126,6 +126,141 @@
     "\n",
     "select * from f_presentation.Circuits_Race_Driver_Constructer;\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "737271be-e9f0-44bf-b9da-5a3aef516d2a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--All-time performance\n",
+    "--Which drivers have competed in at least 50 races\n",
+    "--and how do they rank by their average points per race? \n",
+    "--Please also report each driver’s total races and total points.\n",
+    "select distinct driver_name, \n",
+    "                round(avg(points),2) as average_points, \n",
+    "                count(distinct race_name) as total_races, \n",
+    "                sum(points) as total_points,\n",
+    "                rank() over(order By round(avg(points),2) desc) as rank\n",
+    "from f_presentation.Circuits_Race_Driver_Constructer\n",
+    "group by driver_name;\n",
+    "--having count(distinct race_name)>= 50;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8411caec-cac8-4783-99b7-d8803018fed8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from f_presentation.Circuits_Race_Driver_Constructer;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c7da61c3-9465-422e-80eb-4edaf013d1db",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--Performance in 2011–2020\n",
+    "--“Between the 2011 and 2020 seasons, which drivers started in at least 50 races, \n",
+    "--how do they rank by average points per race? \n",
+    "--Include for each driver their total races and total points scored over that period.”\n",
+    "select driver_name,\n",
+    "       round(avg(points),2) as average_points,\n",
+    "       rank() over (order by round(avg(points),2)desc) as rank,\n",
+    "       count(distinct race_name) as total_races,\n",
+    "       sum(distinct points) as total_points\n",
+    "from f_presentation.Circuits_Race_Driver_Constructer\n",
+    "where race_year between 2011 and 2020\n",
+    "group by driver_name;\n",
+    "--having count(distinct race_name)>=50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bac45413-6cf0-4d14-aac2-3eae6d910593",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--Performance in 2001–2010\n",
+    "--“Between the 2001 and 2010 seasons, which drivers started in at least 50 races, \n",
+    "--and how do they rank by average points per race? \n",
+    "--Include for each driver their total races and total points scored over that period.”\n",
+    "select driver_name,\n",
+    "       round(avg(points),2) as average_points,\n",
+    "       rank() over (order by round(avg(points),2)desc) as rank,\n",
+    "       count(distinct race_name) as total_races,\n",
+    "       sum(distinct points) as total_points\n",
+    "from f_presentation.Circuits_Race_Driver_Constructer\n",
+    "where race_year between 2001 and 2010\n",
+    "group by driver_name;\n",
+    "--having count(distinct race_name)>=50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "030f0df4-42ee-4ef5-b900-f5efdf6c8ec2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
